test/classes/delete-free/anymanaged/anymanaged-init.good
anymanaged-init.chpl:2: error: field is declared with generic memory management
note: consider adding 'owned', 'shared', 'borrowed', or 'unmanaged'
note: if generic memory management is desired, use a 'type' field to store the class type
